[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/PanelContainer.gd" type="Script" id=1]

[node name="PanelContainer" type="ColorRect"]
margin_right = 111.0
margin_bottom = 52.0
color = Color( 0.133333, 0.0980392, 0.152941, 1 )
script = ExtResource( 1 )

[node name="ColorRect1" type="ColorRect" parent="."]
margin_left = 1.0
margin_right = 110.0
margin_bottom = 51.0
color = Color( 0.447059, 0.243137, 0.219608, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 2.0
margin_right = 109.0
margin_bottom = 50.0
color = Color( 0.694118, 0.415686, 0.301961, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 3.0
margin_right = 108.0
margin_bottom = 49.0
color = Color( 0.447059, 0.243137, 0.219608, 1 )

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 4.0
margin_right = 107.0
margin_bottom = 48.0
color = Color( 0.133333, 0.0980392, 0.152941, 1 )

[node name="ColorRect5" type="ColorRect" parent="."]
margin_left = 5.0
margin_right = 106.0
margin_bottom = 47.0
color = Color( 0.247059, 0.156863, 0.196078, 1 )

[node name="ColorRect6" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = -6.0
margin_right = 112.0
color = Color( 0.133333, 0.0980392, 0.152941, 1 )

[node name="ColorRect7" type="ColorRect" parent="."]
margin_top = -2.0
margin_right = 111.0
margin_bottom = -1.0
color = Color( 0.298039, 0.176471, 0.203922, 1 )

[node name="ColorRect8" type="ColorRect" parent="."]
margin_top = -4.0
margin_right = 111.0
margin_bottom = -2.0
color = Color( 0.447059, 0.243137, 0.219608, 1 )

[node name="ColorRect9" type="ColorRect" parent="."]
margin_top = -5.0
margin_right = 111.0
margin_bottom = -4.0
color = Color( 0.694118, 0.415686, 0.301961, 1 )
